--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "license": "CC-BY-NC-ND-4.0",
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "fix-memory-limit": "cross-env LIMIT=4096 increase-memory-limit"
   },
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.5.2",
     "@vuepress/plugin-nprogress": "^1.5.2",
-    "vuepress": "^1.5.2"
+    "vuepress": "^1.5.2",
+    "increase-memory-limit": "^1.0.7",
+    "cross-env": "^7.0.2"
   }
 }
